log4j changes